[gd_scene load_steps=2 format=3 uid="uid://ttbscvnqnm0w"]

[ext_resource type="Script" uid="uid://bi7mrpy3pwdly" path="res://scripts/HUD.gd" id="1_ahhtf"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_ahhtf")

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ScoreLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HukumLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="GameOverPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/GameOverPanel"]
layout_mode = 2

[node name="GameOverLabel" type="Label" parent="MarginContainer/VBoxContainer/GameOverPanel/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="NewGameButton" type="Button" parent="MarginContainer/VBoxContainer/GameOverPanel/VBoxContainer"]
layout_mode = 2
text = "Play Again"
